<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical" >

<TextView
android:id="@+id/tv"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"
android:textSize="14sp"
android:layout_margin="12dp"
android:text="@string/titulo"
/>
<EditText
android:id="@+id/ednom"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:ems="10"
android:layout_margin="12dp"
android:text="@string/hnom">
<requestFocus/>
</EditText>

<EditText
android:id="@+id/edape"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:ems="10"
android:layout_margin="12dp"
android:text="@string/hape"
/>

<Button
android:id="@+id/btn"
android:layout_width="140dp"
android:layout_height="wrap_content"
android:onClick="mostrar"
android:layout_gravity="right"
android:layout_margin="12dp"
android:text="@string/btn"
/>

<TextView
    android:id="@+id/tmostrar"
    android:textSize="25dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/tmostrar" />

</LinearLayout>